--- a/index.html
+++ b/index.html
@@ -30,10 +30,14 @@
                         <li>
                             <a href="#">Prevention</a>
                         </li>
+                    </ul>
+                    <div class="contakt">
+                    <ul>
                         <li>
                             <a href="#">Contact</a>
                         </li>
                     </ul>
+                    </div>
                 </nav>
             </div>
         </div>
